2011-01-05  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* testsuite/testTranslation.cpp: Fix signature.

	* include/parser/BridgeRulesBuilder.tcc: Add more meaningful
	assertions.

	* include/network/Client.tcc: Fix ctor initialisation list.

	* include/mcs/BeliefState.h: Some beautifications.
	* src/dmcs/BeliefCombination.cpp: Likewise.

	* examples/dia-4-4-2-2-1.opt: Fix representation of the interfaces.

	* examples/clasp-result-big.txt: Add terminal 0 to the models.

	* configure.ac: Bump version and fix email address.

2011-01-05  Minh Dao Tran  <dao@kr.tuwien.ac.at>

	* src/dmcs/BaseDMCS.cpp: Clean up.

	* include/solver/SatSolverFactory.h: Add more support for SAT solving.
	* src/dmcs/StreamingDMCS.cpp: Likewise.
	* include/dmcs/StreamingDMCS.h: Likewise.
	* src/network/ThreadFactory.cpp: Likewise.
	* src/solver/RelSatSolver.cpp: Likewise.

	* include/solver/RelSatSolver.h: Add SAT related members
	and more support for the SAT solving.

	* include/network/Handler.h: Remove SAT related members.
	* include/network/Handler.tcc: Likewise.



	* examples/pingpong.cmd: New file.
	* examples/pingpong.opt: Likewise.
	* examples/pingpong1.lp: Likewise.
	* examples/pingpong2.lp: Likewise.
	* examples/pingpong1.br: Likewise.
	* examples/pingpong1.br: Likewise.

2011-01-04  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* src/dmcs/StreamingDMCS.cpp: Remove message queue handling.

	* include/solver/Conflict.h: Add simple conflict representation.
	* include/solver/Makefile.am: Likewise.

	* include/network/MessagingGateway.h: Initial message queue infrastructure.
	* include/network/MessageQueueFactory.h: Likewise.
	* include/network/MessageQueue.h: Likewise.
	* include/network/MessageDispatcher.h: Likewise.
	* include/network/Makefile.am: Likewise.
	* src/network/Makefile.am: Likewise.
	* testsuite/testMessagingGateway.cpp: Likewise.
	* testsuite/Makefile.am: Likewise.
	* src/network/MessageQueueFactory.cpp: Likewise.
	* src/network/MessageDispatcher.cpp: Likewise.
